...
@Composable
fun PostList(posts: List<PostListItemModel>, onAction: (PostListUiAction) -> Unit) {
    LazyColumn(
        modifier = Modifier
            .fillMaxSize()
            .padding(horizontal = 12.dp)
            .testTag("postList"),
        verticalArrangement = Arrangement.Top
    ) {
        items(items = posts, key = { it.id }) { item ->
            Card(
                modifier = Modifier
                    .fillMaxWidth()
...
            .fillMaxWidth()
            .padding(horizontal = 12.dp)
            .background(
                color = MaterialTheme.colorScheme.background, shape = RoundedCornerShape(100)
            )
            .minimumInteractiveComponentSize()
            .testTag("searchBar"),
        shape = RoundedCornerShape(100),
        singleLine = true,
        keyboardActions = KeyboardActions(onSearch = { keyboardController?.hide() }),
        keyboardOptions = KeyboardOptions(
            keyboardType = KeyboardType.Text, imeAction = ImeAction.Search
        ),
...
